entity_macros/tests/ui/derive/ent/unexpected-ent-edge-type-assignment.stderr
error: Unexpected literal type `int` at my_edge/edge/type
 --> $DIR/unexpected-ent-edge-type-assignment.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
